# credit-genie

./: .gitignore  CLAUDE.md  README.md  problem-alignment.md  render-build.sh  render.yaml  track.md
backend/: .env.example  main.py  pyproject.toml
backend/app/: bnpl.py  config.py  ledger.py  models.py  orchestrator.py
backend/app/agents/: prompts.py  rule_drafter.py  subagents.py
backend/app/api/: policy_routes.py  routes.py
backend/app/tools/: backtest.py  evidence.py  explanation.py  policy.py  scoring.py
backend/scripts/: generate_history_book.py
backend/tests/: test_bnpl.py
backend/workspace/: applicants.json
backend/workspace/evidence/aisha-mohammed/: bureau.json  delinquency.json  exposure.json  income.json
backend/workspace/evidence/james-wilson/: bureau.json  delinquency.json  exposure.json  income.json
backend/workspace/evidence/maria-santos/: bureau.json  delinquency.json  exposure.json  income.json
backend/workspace/evidence/raj-patel/: bureau.json  delinquency.json  exposure.json  income.json
backend/workspace/evidence/sarah-chen/: bureau.json  delinquency.json  exposure.json  income.json
backend/workspace/history/: historic_outcomes.json
backend/workspace/policy/: credit_policy_active.yaml
backend/workspace/policy/drafts/: credit_policy_v2.2.yaml  credit_policy_v2.2_draft.yaml  credit_policy_v2.3_rule_draft.yaml
backend/workspace/policy/history/: credit_policy_v2.3.yaml  credit_policy_v2.5.yaml  credit_policy_v2.6.yaml  credit_policy_v2.6_20260711T154326Z.yaml
docs/: agent-design.md  architecture-diagram.html  scope.md  (+4 more)
(+18 files in other folders)
