[project]
name = "credit-genie-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.12",
    "fastapi>=0.139.0",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sse-starlette>=3.4.5",
    "uvicorn[standard]>=0.51.0",
]
